--- a/app/src/main/res/layout/activity_main_menu.xml
+++ b/app/src/main/res/layout/activity_main_menu.xml
@@ -9,7 +9,7 @@
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="New Button"
+        android:text="Data"
         android:id="@+id/btnView"
         android:layout_marginTop="48dp"
         android:layout_alignParentTop="true"
@@ -18,7 +18,7 @@
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="New Button"
+        android:text="Export"
         android:id="@+id/btnExport"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="102dp" />
@@ -26,7 +26,9 @@
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="New Button"
+        android:text="Exit"
         android:id="@+id/btnExit"
-        android:layout_marginTop="84dp"/>
+        android:layout_marginTop="53dp"
+        android:layout_below="@+id/btnExport"
+        android:layout_centerHorizontal="true" />
 </RelativeLayout>
