--- a/app/src/main/res/layout/dynamic_layout.xml
+++ b/app/src/main/res/layout/dynamic_layout.xml
@@ -1,9 +1,8 @@
-<?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:id="@+id/dyn_layout"
+    android:gravity="bottom"
     xmlns:tools="http://schemas.android.com/tools">
 
     <TextView
@@ -13,11 +12,11 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="419dp"
         android:orientation="vertical"
-        android:id="@+id/dynamicBtns">
-
-
+        android:id="@+id/dyn_layout"
+        android:layout_above="@+id/add"
+        android:layout_below="@+id/current">
 
     </LinearLayout>
 
@@ -26,23 +25,39 @@
         android:layout_height="wrap_content"
         android:text="Add"
         android:id="@+id/add"
-        android:layout_alignParentBottom="true"/>
+        android:gravity="bottom"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        />
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Delete Current"
+        android:text="Delete"
         android:id="@+id/delete"
-        android:layout_toRightOf="@+id/add"
-        android:layout_toLeftOf="@+id/back"
-        android:layout_alignParentBottom="true"/>
+        android:gravity="bottom"
+        android:layout_gravity="center_horizontal"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true" />
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:text="Modify"
+        android:id="@+id/modify"
+        android:layout_alignParentBottom="true"
+        android:layout_toLeftOf="@+id/delete"
+        android:layout_toStartOf="@+id/delete" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:gravity="bottom"
         android:text="Back"
         android:id="@+id/back"
         android:layout_alignParentBottom="true"
-        android:layout_alignParentRight="true"/>
+        android:layout_toRightOf="@+id/add"
+        android:layout_toEndOf="@+id/add" />
 
 </RelativeLayout>
